crates/graphcal-eval/tests/snapshots/error_snapshots__error_index_binding_value_not_index.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
invalid type-level binding value for `Axis`
    Diagnostic severity: error
Begin snippet for index_binding_value_not_index.gcl starting at line 7, column 1

snippet line 7: include scale(
snippet line 8:     Axis: 3,
    label at line 8, column 11: expected a compatible type-level binding argument
snippet line 9:     xs: table[Fin(3)] {
diagnostic help: index bindings accept a compatible index name or structural axis such as `Axis: Fin(3)`; type and dimension bindings accept a compatible name
diagnostic code: graphcal::M016
