crates/graphcal-eval/tests/snapshots/error_snapshots__error_index_label_as_type.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
index label `M#A` cannot be used as a type
    Diagnostic severity: error
Begin snippet for index_label_as_type.gcl starting at line 3, column 1

snippet line 3: 
snippet line 4: param x: M#A = 1.0;
    label at line 4, columns 10 to 12: error here
diagnostic code: graphcal::E001
