crates/graphcal-eval/tests/snapshots/error_snapshots__error_index_match_with_bindings.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unexpected token `(`
    Diagnostic severity: error
Begin snippet for index_match_with_bindings.gcl starting at line 5, column 1

snippet line 5:     match m {
snippet line 6:         Maneuver#Departure(x) => 1.0,
    label at line 6, column 27: here
snippet line 7:         Maneuver#Correction => 2.0,
diagnostic help: expected `=>`
diagnostic code: graphcal::P001
