crates/graphcal-eval/tests/snapshots/error_snapshots__error_index_mismatch.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
index mismatch: expected `Maneuver`, found `Phase`
    Diagnostic severity: error
Begin snippet for index_mismatch.gcl starting at line 7, column 1

snippet line 7: };
snippet line 8: node bad: Velocity[Phase] = for p: Phase { @dv[p] };
    label at line 8, column 48: wrong index
diagnostic code: graphcal::I005
