crates/graphcal-eval/tests/snapshots/error_snapshots__error_indexed_comparison_axis_mismatch.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 305
expression: rendered
---
mismatched index axes in comparison: Length[Case] vs Length[Other]
    Diagnostic severity: error
Begin snippet for indexed_comparison_axis_mismatch.gcl starting at line 14, column 1

snippet line 14: 
snippet line 15: node same: Bool[Case] = @lhs == @rhs;
    label at line 15, columns 33 to 36: has type Length[Other]
diagnostic help: element-wise operands must be indexed by the same axes in the same order; an unindexed operand broadcasts to every key
diagnostic code: graphcal::D011
