crates/graphcal-eval/tests/snapshots/error_snapshots__error_indexed_equality.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 304
expression: rendered
---
dimension mismatch: expected scalar-comparable operand, found Length[Case]
    Diagnostic severity: error
Begin snippet for indexed_equality.gcl starting at line 8, column 1

snippet line 8: 
snippet line 9: node same: Bool = @actual == @expected;
    label at line 9, columns 19 to 25: has dimension Length[Case]
snippet line 10: 
diagnostic help: equality on indexed values is not supported; compare element-wise with a `for` comprehension
diagnostic code: graphcal::D001
