crates/graphcal-eval/tests/snapshots/error_snapshots__error_indexed_tolerance_axis_mismatch.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 313
expression: rendered
---
mismatched index axes in tolerance assertion: Length[Case] vs Length[Other]
    Diagnostic severity: error
Begin snippet for indexed_tolerance_axis_mismatch.gcl starting at line 14, column 1

snippet line 14: 
snippet line 15: assert bad = @actual ~= @wrong +/- 0.1 m;
    label at line 15, columns 25 to 30: has type Length[Other]
diagnostic help: element-wise operands must be indexed by the same axes in the same order; an unindexed operand broadcasts to every key
diagnostic code: graphcal::D011
